tests/snapshots/regression/recovery__unterminated_string_then_continue.snap
---
source: tests/regression_snapshots.rs
---
$ flux --no-cache tests/fixtures/recovery/unterminated_string_then_continue.flx
exit_code: 1

[1 of 7] Compiling  Assert
[2 of 7] Compiling  IO
[3 of 7] Compiling  List
[4 of 7] Compiling  Numeric
[5 of 7] Compiling  Option
[6 of 7] Compiling  String
• 1 error • tests/fixtures/recovery/unterminated_string_then_continue.flx
error[E071]: Unterminated String

String literal is missing closing quote.

  tests/fixtures/recovery/unterminated_string_then_continue.flx:1:9
  |
1 | let s = "oops
  |         ^^^^^

Hint:
  Add a closing " at the end of the string.
